[project]
name = "libephemeris"
version = "1.0.0a10"
description = "A high-precision, open-source astronomical ephemeris library for Python, powered by Skyfield."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Giacomo Battaglia", email = "giacomo@libephemeris.dev" }
]
maintainers = [
    { name = "Giacomo Battaglia", email = "giacomo@libephemeris.dev" }
]
keywords = [
    "astronomy",
    "ephemeris",
    "astrology",
    "planetary",
    "skyfield",
    "jpl-de440",
    "astrological",
    "celestial",
    "horoscope",
    "zodiac",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "skyfield>=1.54",  # 1.54: deflectors= arg, 30% faster risings/settings, NumPy array Time subtraction
    "skyfield-data>=7.0.0",
    "astroquery>=0.4.7",  # Required for automatic SPK kernel downloads from JPL Horizons
    "certifi",  # SSL certificates for HTTPS connections to JPL Horizons
    "click>=8.0",  # CLI framework for both prod (libephemeris) and dev (leph) commands
    "spktype21>=0.1.0",  # Support for SPK type 21 files from JPL Horizons (asteroids, comets)
    "pyerfa>=2.0.0",  # IAU ERFA: high-precision nutation (IAU 2006/2000A), obliquity, precession, aberration
    "zstandard>=0.22.0",  # Zstandard compression for LEB2 compressed ephemeris format
    "tomli>=1.1.0; python_version < '3.11'",  # TOML parser for config files (stdlib on 3.11+)
]

[project.optional-dependencies]
# Star catalog building (scripts/build_star_catalog.py)
stars = [
    "astropy>=5.0.0",
]
# N-body integration for asteroid orbit propagation
nbody = [
    "rebound>=4.0.0",
    "assist>=1.1.0",
]
# All optional features
all = [
    "rebound>=4.0.0",
    "assist>=1.1.0",
]
dev = [
    "black>=25.1.0",
    "mypy>=1.0.0",
    "poethepoet>=0.37.0,<0.38.0",
    "pyswisseph>=2.10.3.2",  # Comparison/validation tests only — not a runtime dependency
    "pytest>=8.0.0,<9.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.6",
    "pytest-cov>=6.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pytest-sugar>=1.1.1",
    "hypothesis>=6.0.0",
    "spiceypy>=6.0.0",  # For generating compact planet center SPK files
    "astropy>=5.0.0",  # Cross-validation against professional astronomy standards (dev only)
    "ebooklib>=0.20",  # EPUB generation for manual (scripts/generate_manual_epub.py)
    "markdown>=3.7",  # Markdown-to-HTML for EPUB manual generation
    "pyyaml>=6.0",  # YAML metadata parsing for EPUB manual generation
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/g-battaglia/libephemeris"
Documentation = "https://github.com/g-battaglia/libephemeris#readme"
Repository = "https://github.com/g-battaglia/libephemeris"
Issues = "https://github.com/g-battaglia/libephemeris/issues"
Changelog = "https://github.com/g-battaglia/libephemeris/blob/main/CHANGELOG.md"

[project.scripts]
libephemeris = "libephemeris.cli:main"
leph = "libephemeris.dev_cli:main"



[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["libephemeris", "libephemeris.cli", "libephemeris.dev_cli"]

[tool.setuptools.package-data]
libephemeris = ["py.typed", "data/*.csv", "data/leb2/base_core.leb2"]

# ---------------------------------------------------------------------------
# Poe shortcuts — curated aliases for the most common dev workflows.
# The full command set is available via the `leph` CLI (see: leph --help).
#
# All 120+ commands are accessible through `leph` with TAB completion.
# These poe shortcuts exist for muscle-memory convenience only.
#
# Naming convention:
#   test:<backend>:<variant>         — unit tests via <backend>
#   test:compare:<backend>:<variant> — libephemeris vs pyswisseph via <backend>
#
# Test matrix: every backend gets core / fast / full / compare / compare:full.
# ---------------------------------------------------------------------------

[tool.poe.tasks]

# --- Code quality ---
lint = {cmd = "leph code lint", help = "Lint all Python files (ruff, auto-fix)"}
format = {cmd = "leph code format", help = "Format all Python files (ruff)"}
typecheck = {cmd = "leph code typecheck", help = "Type-check libephemeris (mypy)"}

# --- Skyfield backend: core / fast / full ---
"test:skyfield:core" = {cmd = "leph test skyfield essential", help = "Skyfield essential ~490 tests, ~20s (parallel)"}
"test:skyfield:fast" = {cmd = "leph test skyfield unit-fast", help = "Skyfield unit tests ~5890, ~1 min (parallel, no @slow)"}
"test:skyfield:full" = {cmd = "leph test skyfield all-full-fast", help = "Skyfield ALL tests including @slow (parallel)"}

# --- LEB backend: core / fast / full ---
"test:leb:core" = {cmd = "leph test leb-backend essential", help = "LEB essential ~490 tests, ~20s (parallel)"}
"test:leb:fast" = {cmd = "leph test leb-backend unit-fast", help = "LEB unit tests ~5890, ~1 min (parallel, no @slow) [RECOMMENDED]"}
"test:leb:full" = {cmd = "leph test leb-backend unit-full", help = "LEB ALL unit tests including @slow (sequential)"}

# --- Horizons backend: core / fast / full ---
"test:horizons:core" = {cmd = "leph test horizons precision-quick", help = "Horizons quick precision check, 50 dates (~15s)"}
"test:horizons:fast" = {cmd = "leph test horizons precision", help = "Horizons precision 13 bodies, 200 dates (~45s)"}
"test:horizons:full" = {cmd = "leph test horizons vs-leb", help = "Horizons cross-validate against LEB2 (15 bodies, 100 dates)"}

# --- Compare: libephemeris vs pyswisseph ---
"test:compare:skyfield" = {cmd = "leph test compare skyfield-fast", help = "Compare vs pyswisseph via Skyfield (parallel, no @slow)"}
"test:compare:skyfield:full" = {cmd = "leph test compare skyfield-full", help = "Compare vs pyswisseph via Skyfield (ALL tests)"}
"test:compare:leb" = {cmd = "leph test compare leb-backend", help = "Compare vs pyswisseph via LEB backend (no @slow)"}
"test:compare:leb:full" = {cmd = "leph test compare leb-backend-full", help = "Compare vs pyswisseph via LEB backend (ALL tests)"}
"test:compare:horizons" = {cmd = "leph test compare horizons-backend", help = "Compare vs pyswisseph via Horizons API (no @slow)"}
"test:compare:horizons:full" = {cmd = "leph test compare horizons-backend-full", help = "Compare vs pyswisseph via Horizons API (ALL tests)"}

# --- Coverage ---
coverage = {cmd = "leph test coverage run", help = "Tests with coverage reports (no @slow)"}

# --- LEB1 generation + verification (resumable group workflow) ---
"leb:generate:base" = {cmd = "leph leb generate base groups", help = "Generate base tier LEB via group workflow (resumable)"}
"leb:generate:medium" = {cmd = "leph leb generate medium groups", help = "Generate medium tier LEB via group workflow (resumable)"}
"leb:generate:extended" = {cmd = "leph leb generate extended groups", help = "Generate extended tier LEB via group workflow (resumable)"}
"leb:verify:base" = {cmd = "leph leb verify base", help = "Verify base tier LEB file vs Skyfield"}
"leb:verify:medium" = {cmd = "leph leb verify medium", help = "Verify medium tier LEB file vs Skyfield"}
"leb:verify:extended" = {cmd = "leph leb verify extended", help = "Verify extended tier LEB file vs Skyfield"}

# --- LEB2 conversion + verification ---
"leb2:convert:base" = {cmd = "leph leb2 convert base", help = "Convert base tier LEB1 -> LEB2 (all 4 body groups)"}
"leb2:convert:medium" = {cmd = "leph leb2 convert medium", help = "Convert medium tier LEB1 -> LEB2 (all 4 body groups)"}
"leb2:convert:extended" = {cmd = "leph leb2 convert extended", help = "Convert extended tier LEB1 -> LEB2 (all 4 body groups)"}
"leb2:verify:base" = {cmd = "leph leb2 verify base", help = "Verify base tier LEB2 vs LEB1 (<0.003\")"}
"leb2:verify:medium" = {cmd = "leph leb2 verify medium", help = "Verify medium tier LEB2 vs LEB1 (<0.003\")"}
"leb2:verify:extended" = {cmd = "leph leb2 verify extended", help = "Verify extended tier LEB2 vs LEB1 (<0.003\")"}

[tool.pytest.ini_options]
markers = [
    "leb_compare: LEB vs Skyfield comparison tests (medium tier)",
    "leb_compare_base: LEB vs Skyfield comparison tests (base tier)",
    "leb_compare_extended: LEB vs Skyfield comparison tests (extended tier)",
    "leb_compare_crosstier: Cross-tier consistency tests",
    "slow: Slow tests excluded from default runs",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
exclude = ["compare_scripts"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  compare_scripts
)/
'''

[tool.ruff.lint]
# Ignore star imports (F403, F405) - the library uses star imports for constants
# Ignore unused imports in __init__.py (F401) - re-exports for public API
# Ignore module level imports not at top of file (E402) - intentional for __init__.py
ignore = ["F403", "F405", "F401", "E402"]
# Also ignore unused local variables (F841) for now - complex astronomical calculations
extend-ignore = ["F841"]

[tool.coverage.run]
source = ["libephemeris"]
branch = true
parallel = true
omit = [
    "libephemeris/__pycache__/*",
]

[tool.coverage.paths]
source = [
    "libephemeris/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"
